ref: Cleanup some ui stuff, add new types
