# backend/main.py
@@ -1,12 +1,13 @@
+import itertools
 from typing import List
+
 from fastapi import FastAPI, HTTPException
 from fastapi.middleware.cors import CORSMiddleware
 from fastapi.responses import RedirectResponse
-import importlib.metadata
 
 import crud
 from database import create_db_and_tables
-from models import Preset, PresetMetadata
+from models import Preset, PresetMetadata, SearchFilter, PresetsCatalog
 
 app = FastAPI()
 
@@ -37,9 +38,21 @@ def read_root():
     return RedirectResponse(url="/docs")
 
 
-@app.get("/presets/catalog", response_model=List[PresetMetadata], operation_id="get_presets_catalog")
+@app.get("/presets/catalog", response_model=PresetsCatalog, operation_id="get_presets_catalog")
 def read_catalog():
-    return crud.get_all_presets()
+    presets = crud.get_all_presets()
+
+    return PresetsCatalog(
+        presets_metadata=[PresetMetadata(
+            id = p.id,
+            name = p.name,
+            description = p.description,
+            author=p.author,
+            tags = p.tags
+        ) for p in presets],
+        authors=sorted(list(set([p.author for p in presets]))),
+        tags=sorted(list(set(itertools.chain(*[p.tags for p in presets]))))
+    )
 
 
 @app.get("/presets", response_model=List[Preset], operation_id="get_all_presets")
@@ -53,3 +66,13 @@ def read_preset(preset_id: int):
     if db_preset is None:
         raise HTTPException(status_code=404, detail="Preset not found")
     return db_preset
+
+
+@app.get("/search_filters", response_model=List[SearchFilter], operation_id="get_all_search_filters")
+def read_search_filters():
+    return crud.get_all_search_filters()
+
+
+@app.get("search_filter/{filter_id}", response_model=SearchFilter, operation_id="get_search_filter")
+def read_search_filter(filter_id: int):
+    db_preset = crud.get_search_filter(filter_id=filter_id)
